--- a/_config.yml
+++ b/_config.yml
@@ -128,6 +128,9 @@ author:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mmmmmmpc"
+    - label: "Bluesky"
+      icon: "fab fa-fw fa-bluesky"  # Font Awesome brand icon
+      url: "https://bsky.app/profile/mmmmmmpc.bsky.social"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mmmmmmpc"
