--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Miguel Pérez Colino"
 description              : "A trivial personal website."
-url                      : "https://mmmmmmpc.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+url                      : "https://miguelpc.eu" # "https://mmmmmmpc.github.io"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "mmmmmmpc/mmmmmmpc.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
