--- a/_config.yml
+++ b/_config.yml
@@ -131,6 +131,9 @@ author:
     - label: "Bluesky"
       icon: "fab fa-fw fa-bluesky"  # Font Awesome brand icon
       url: "https://bsky.app/profile/mmmmmmpc.bsky.social"
+    - label: "Mastodon"
+      icon: "fab fa-fw fa-mastodon"
+      url: "https://tty0.social/@mmmmmmpc"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mmmmmmpc"
@@ -145,8 +148,11 @@ footer:
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mmmmmmpc"
     - label: "Bluesky"
-      icon: "fab fa-fw fa-bluesky"  # Font Awesome brand icon
+      icon: "fab fa-fw fa-bluesky"
       url: "https://bsky.app/profile/mmmmmmpc.bsky.social"
+    - label: "Mastodon"
+      icon: "fab fa-fw fa-mastodon"
+      url: "https://tty0.social/@mmmmmmpc"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/mmmmmmpc"
