--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,8 @@ algolia:
   search_only_api_key    : # YOUR_SEARCH_ONLY_API_KEY
   powered_by             : # true (default), false
 google:
-  search_engine_id       : # YOUR_SEARCH_ENGINE_ID
-  instant_search         : # false (default), true
+  search_engine_id       : G-0G8JDME5YX # YOUR_SEARCH_ENGINE_ID
+  instant_search         : true # false (default), true
 # SEO Related
 google_site_verification : "q93MIyDXcNuEsxtxtgJAxKkGk7DZn6cGygbo2uOz7A"
 bing_site_verification   :
